EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==09/25/2011==
Derision: Implemented Tune Of Pursuance AA.

==09/24/2011==
JJ: Added hacker entry for possible instant camp disconnects.

==09/23/2011==
Trevius: Destructible Objects now change damage states as they reach 75%, 50%, 25% and 0%.
Trevius: Added Perl Mob quest object SendUntargetable(to_client, in) to toggle the ability to be targeted.

==09/22/2011==
Trevius: Initial implementation of Destructible Objects (SoD only for now).  Most of the work was done by Derision.
To Create a Destructible Object, use the 'lastname' field in npc_types to set the model (ie. DEST_DEV_TENT1), and add "o" in the 'npcspecialatks' field.

==09/21/2011==
Leere: Damage shields should no longer break root spells.

==09/20/2011==
Trevius: New rule added to allow a cap for GM skill training on specializations (default is 50).
Trevius: #maxskills will now only set specializations to 50 each to prevent them from all resetting to 1.
Trevius: GM Trainers will no longer allow training more than 1 (or 2 if you have the AA) specializations above 50.
Bad_Captain: Added rule for Bot AAs by expansion, bot bash fix (bots with bask/slam skill could bash regardless of weapon(s) or shield), various bot AA fixes, added a few bot AAs


Optional SQL:
utils/sql/svn/2015_optional_specialization_training_rule.sql
utils/sql/svn/2016_optional_rule_bot_aa_expansion.sql

==09/12/2011==
Leere: (Tabasco) Added a deque for signals received by an NPC.
Sorvani: Various message type fixes, most notably NPC Flurry/Enrage/Rampage and Pet Flurry/Rampage.

==09/05/2011==
Akkadius: (Akkadius/Lerxst) Fixed Beastlord 1.5 and 2.0 pet clickies.

==09/03/2011==
KLS: Added working Alternate Currency system for SoD and SoF(Untested but hopefully works).
KLS: Added two fields to merchantlist that allows one to filter which items are offered to players by minimum faction and minimum level.